--- a/pizza.html
+++ b/pizza.html
@@ -7,19 +7,25 @@
 <body>
 <h1>Pizza, Pizza, and More Pizza Parlor</h1>
 <h2>Prices</h2>
-<p><ul>Large: $18</ul>
-<ul>Medium: $15</ul>
-<ul>Small: $12</ul></p>
+<ul>
+    <li>Large: $18</li>
+    <li>Medium: $15</li>
+    <li>Small: $12</li>
+</ul>
 <h2>Molly's Menu</h2>
-<p><ul><b>The Luau.</b> Hawaiian smoked ham, sweet maple bacon, pineapple, cheddar,<br> and Mozzarella cheese, and our famous homemade pizza sauce</br></ul>
-<ul><b>The Tatonka.</b> Our signature spicy buffalo sausage, onions, green peppers,<br> black olives, fresh tomato, and fresh Mozzarella.</br></ul>
-<ul><b>The Metropolitan.</b> Savory steak, onions, mushrooms, roasted green and <br>red peppers, fresh garlic, black olives, and Mozzarella and Parmesan cheese.</br></ul>
-<ul><b>The Super Taco Mexicana.</b> Chunky salsa sauce, lean ground beef, onions<br> and Mozzarella cheese baked in the oven and then loaded with fresh sour cream, <br>lettuce, tomatoes, and cheddar cheese.</br></ul>
-<ul><b>The New York City Deli.</b> Lots of meat: Ham, bacon, pepperoni, and Mozzarella,<br> with another layer of pepperoni, spicy sausage, onion, and fresh garlic. Angioplasty not included.</br></ul>
-<ul><b>The Hildagrun.</b> Sausage, bacon, onions, sauerkraut with tons of fresh cheese.</ul>
-<ul><b>The Cheeser Cheeser.</b> Lotws of Mozzarella, Cheddar, Parmesan, Provolone, <br>Gouda, and Feta cheeses. Delish.</br></ul>
-<ul><b>The Tree Hugger.</b> Fresh organic and locally grown vegetables: Green peppers,<br> onions, tomatoes, carrots, eggplant, mushrooms, black and green olives, and a basil leaf <br>swimming with our delicious fresh garlic tomato sauce and made with choice of Mozzarella or soy cheese.</br></ul>
+<p>
+<ul>
+    <li><b>The Luau.</b> Hawaiian smoked ham, sweet maple bacon, pineapple, cheddar, and Mozzarella cheese, and our famous homemade pizza sauce</li>
+    <li><b>The Tatonka.</b> Our signature spicy buffalo sausage, onions, green peppers, black olives, fresh tomato, and fresh Mozzarella.</li>
+    <li><b>The Metropolitan.</b> Savory steak, onions, mushrooms, roasted green and red peppers, fresh garlic, black olives, and Mozzarella and Parmesan cheese.</li>
+    <li><b>The Super Taco Mexicana.</b> Chunky salsa sauce, lean ground beef, onions and Mozzarella cheese baked in the oven and then loaded with fresh sour cream, lettuce, tomatoes, and cheddar cheese.</li>
+<li><b>The New York City Deli.</b> Lots of meat: Ham, bacon, pepperoni, and Mozzarella,<br> with another layer of pepperoni, spicy sausage, onion, and fresh garlic. Angioplasty not included.</li>
+<li><b>The Hildagrun.</b> Sausage, bacon, onions, sauerkraut with tons of fresh cheese.</li>
+<li><b>The Cheeser Cheeser.</b> Lotws of Mozzarella, Cheddar, Parmesan, Provolone, <br>Gouda, and Feta cheeses. Delish.</li>
+<li><b>The Tree Hugger.</b> Fresh organic and locally grown vegetables: Green peppers,<br> onions, tomatoes, carrots, eggplant, mushrooms, black and green olives, and a basil leaf <br>swimming with our delicious fresh garlic tomato sauce and made with choice of Mozzarella or soy cheese.</li>
 <!-- You will find the best pizza below-->
-<ul><b>Make it Snappy.</b>Macaroni and cheese, Brie, bacon, onions, mushrooms, anchovies,<br> and pineapple chunks spread over a bed of barbecue sauce and Gouda cheese</br></ul></p>
+<li><b>Make it Snappy.</b>Macaroni and cheese, Brie, bacon, onions, mushrooms, anchovies, and pineapple chunks spread over a bed of barbecue sauce and Gouda cheese</li>
+</ul>
+</p>
 </body>
 </html>
